<resources>
    <string name="app_name">Grid Locator</string>
    <string name="initial_message">Looking for location…</string>
    <string name="gid">GID</string>
    <string name="compass">Compass</string>
    <string name="please_turn_on_gps">Please enable GPS</string>
    <string name="ping_on">Ping On</string>
    <string name="ping_off">Ping Off</string>
    <string name="lat">Lat</string>
    <string name="lon">Long</string>
    <string name="load_file">Load File</string>
    <string name="convert_to_gid">To GID</string>
    <string name="convert_to_latlon">To Lat/Long</string>
    <string name="cancel">Cancel</string>
    <string name="conversion_calculator">Conversion Calculator</string>
    <string name="latlon_validation_message">Please enter valid latitude and longitude and try again.</string>
    <string name="gid_validation_message">Please enter valid GID and try again.</string>
    <string name="select_location">Select Exact Location</string>
    <string name="lat_lon">Lat %1$s, Lon %2$s</string>
</resources>
